# ansible-base

./: README.md  README.org  ansible.cfg  pyproject.toml
inventories/: 01_terraform.yml  02_aws_ec2.yml
inventories/development/: hosts
inventories/development/host_vars/: hostname.yml
